--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="photo">
           <div class="photo-text">
             <h1>Heading</h1>
-            <p>lorem8</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
       </div>
